--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -65,9 +65,9 @@
               - if post.title.blank?
                 #{post.user.name} marked this task complete on #{post.created_at.strftime('%B %d, %Y')}.
               - else
-                = truncate(post.title, length: 40)
+                = truncate(post.title, length: 75)
             - unless post.description.blank?
-              %h5.description{ style: "margin-bottom:2px; "}= post.description
+              %h5.description{ style: "margin-bottom:2px; "}= truncate(post.description, length: 100)
             %h5{ style: "margin-top:0" }= link_to truncate(post.url, length:85), post.url            
     
     - unless post.caption.blank?
