--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -18,7 +18,7 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
 .postspace{display: inline-block;  border-radius: 3px;  box-shadow: 0 2px 4px rgba(0, 0, 0, .05);  background-color:white;  border: 1px solid #ccc;  margin:0 auto 0 auto;  position:relative;font:normal 13px arial, sans-serif;padding: 0 12px;width: 520px;}
 .photo{ border-radius:4px; width: 50px; height: 50px; }
 .username{ text-decoration: none; color:#005C1F; font-size:17px; }
-.posttext { margin: -2px -12px 0 -12px; padding: 9px 12px; background-color:#E5F5EA; }
+.posttext { margin: -2px -12px 0 -12px; padding: 9px 12px; background-color:rgb(211, 241, 220); }
 .posttext pre{padding: 0; margin:0; word-break: normal; background-color: inherit; border: none;}
 .leveltext { font-weight: normal; }
 .challengetext { font-weight: bold; text-decoration:none; color:black; display:inline; }
