--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -67,9 +67,9 @@
                 %div#answer_preview{ style: "text-align: center;" }
                   = image_tag "/images/image_thumb.png", class: "image_preview", id: "image_preview", alt: "Image placeholder"
                 %div#task_preview.hide{ style: "position: relative; font-size: 12px; min-height: 250px; max-height: 300px; overflow-x: hidden; overflow-y: hidden;" }
-                  %div.content{ style: "position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index: 1; font-size: 20px;"}
-                    %pre.unstyled
-                  = image_tag "/images/image_thumb.png", alt: "Image placeholder", class: "preview_image", style:"height: 125px; top: 0px; float: right; z-index: 500;"
+                  %div.content{ style: "height:76%; position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index: 1; font-size: 20px;"}
+                    %pre.unstyled{ style: "font-size:11px; height:95%;"}
+                  = image_tag "/images/image_thumb.png", alt: "Image placeholder", class: "preview_image", style:"display:block; opacity:.2; margin-right:auto; margin-left:auto; width:207px; z-index: 500;"
                   %div.details{ style: "padding: 5px 2px; height: 50px; width: 100%; position: absolute; bottom: 0px; left: 0px; z-index: 1000; background-color: black;"}
                     %h4.title
                     %h5.description
