--- a/app/views/newsfeed/_feed.html.haml
+++ b/app/views/newsfeed/_feed.html.haml
@@ -14,24 +14,21 @@
     %p There are no responses yet.
 - else
   :javascript
-    $(function(){ 
-      $(".youtube_answer").each(function(){ set_large_youtube_preview($(this).attr("alt"), $(this).attr("id")); });
-      $(".display_sharing_icon").click(function(){ 
-        $(this).parents(".leftstuff").find(".social_toolbar").css("display", "inline");
-        $(this).parent().remove(); 
-      });
-      init_voting();
-      init_comments();
-      init_iph();
-      convert_links();
-      $(".retract_link").on("ajax:success", function(xhr, data){
-        $(this).parents(".post").hide("slow");
-      });
-      $(".view_more").on("ajax:success", function(xhr, data){ $(this).parent().replaceWith(data); });
+    $(".youtube_answer").each(function(){ set_large_youtube_preview($(this).attr("alt"), $(this).attr("id")); });
+    
+    init_voting();
+    init_comments();
+    init_iph();
+    convert_links();
+    
+    $(".retract_link").unbind("ajax:success").on("ajax:success", function(xhr, data){
+      $(this).parents(".post").hide("slow");
     });
 
   = render partial: "newsfeed/post", collection: feed.posts, locals: { feed: feed }
   
   - if feed.url
+    :javascript
+      $(".view_more").unbind("ajax:success").on("ajax:success", function(xhr, data){ $(this).parent().replaceWith(data); });
     %div.post{ style: "text-align: center; margin: auto;" }
       = link_to "View More", "#{feed.url}", class: "button button-standard view_more", style: "text-align: center; margin: auto;", remote: true
