--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -4,18 +4,16 @@
 %div.explorecontainer
   %div.explorenewusercontent
     :javascript
-      $(function(){
-        $(".persona_select").click(function(){
-          $(".persona_select.active").removeClass("active");
-          $(this).addClass("active");
-          var id = $(this).attr("id").substring(15);
-          $(".persona_preview").html($(".persona_preview_"+id).html());
-          show_persona_challenges();
-        });
-        $(".persona_select:first").addClass("active");
-        close_button();
+      $(".persona_select").click(function(){
+        $(".persona_select.active").removeClass("active");
+        $(this).addClass("active");
+        var id = $(this).attr("id").substring(15);
+        $(".persona_preview").html($(".persona_preview_"+id).html());
         show_persona_challenges();
       });
+      $(".persona_select:first").addClass("active");
+      close_button();
+      show_persona_challenges();
     %div.exploreheader
       %div.modal_close{ style: "margin: -8px 14px 0 0;" }
         %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png", alt: "Close"}
@@ -31,7 +29,7 @@
     %div.personatiles
       - @personas.each do |persona|
         %div.singleexploretile
-          %a{ href: "#", class: "persona_select", id: "persona_select_#{persona.id}" }
+          %a{ class: "persona_select", id: "persona_select_#{persona.id}" }
             %div.exploretileimage
               = image_tag persona.picture, size: "85x85", alt: "#{persona.name}"
     %div.persona_preview
