--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -1,42 +1,46 @@
 %div.quizcontainer{ style: "#{@stored_resource.nil? ? '': 'margin-top: 0px;'}" }
   = render "modals/report_issue"
   %div.quizspace
-    :javascript
-      var continue_countdown = true;
-      var count_down_bar_width = 100;
-      
-      $(function(){
+    - unless @stop_counter
+      :javascript
+        var continue_countdown = true;
+        var count_down_bar_width = 100;
+        
         $count_down_bar = $(".pointbarfiller");
         $count_down_points = $count_down_bar.parent().find("div.pointbartext");
         setTimeout(function(){
           setTimeout(count_down_bar, 300);
           setTimeout(count_down_points, 300); 
         }, 1000);
-        
-        $(".answer_content").click(function(){
-          continue_countdown = false;
-          $(this).find("input").attr("checked", "checked");
-          $("#challenge_form").submit();
-        });
-        $("#challenge_form").on("ajax:success", function(xhr, data){
-          $("#answer_"+data.correct_answer).css("background-color", "rgba(104, 231, 104, 0.79)").css("color", "white");
-          if(data.correct_answer != data.supplied_answer){
-            $("#answer_"+data.supplied_answer).css("background-color", "#FF9999").css("color", "white");
-          }$("#nextbutton").show();
-        });
-        $("#nextbutton").click(function(){
-          $(this).addClass("disabled").attr("disabled", "disabled");
-        });
-        $("#nextbutton").on("ajax:success", function(xhr, data){
-          $(".quizcontainer").fadeOut('slow', function(){
-            if(data.status == "reload"){
-              window.location.reload(true);
-            } else {
-              $(this).replaceWith(data).fadeIn();
-            }
-          });
+    
+    :javascript
+      $(".answer_content").click(function(){
+        continue_countdown = false;
+        $(this).find("input").attr("checked", "checked");
+        $("#challenge_form").submit();
+      });
+      
+      $("#challenge_form").on("ajax:success", function(xhr, data){
+        $("#answer_"+data.correct_answer).css("background-color", "rgba(104, 231, 104, 0.79)").css("color", "white");
+        if(data.correct_answer != data.supplied_answer){
+          $("#answer_"+data.supplied_answer).css("background-color", "#FF9999").css("color", "white");
+        }$("#nextbutton").show();
+      });
+      
+      $("#nextbutton").click(function(){
+        $(this).addClass("disabled").attr("disabled", "disabled");
+      });
+    
+      $("#nextbutton").on("ajax:success", function(xhr, data){
+        $(".quizcontainer").fadeOut('slow', function(){
+          if(data.status == "reload"){
+            window.location.reload(true);
+          } else {
+            $(this).replaceWith(data).fadeIn();
+          }
         });
       });
+     
     %div.quizheader
       = image_tag @path.path_pic, style: "width: 50px; height: 50px;", alt: "#{@path.name}"
       %div{ style: "display:inline-block;" }
@@ -83,4 +87,4 @@
       %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
         - if @task.resource
           %p= @task.resource
-    %a.arena_report_link{href:"#", style: "float:right; text-decoration:none;"} Report this question
+    %a.arena_report_link{ style: "float:right; text-decoration:none;"} Report this question
