--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -5,11 +5,11 @@
         %button#editor_link.button.button-small.button-actionable{ style: "margin-top: -5px; text-shadow:none;" } Create a Question
       %ul.nav.nav-tabs
         %li.active
-          %a#arena_tab_link{ href: "#", "data-tab" => "arena_tab", title: "Arena"} Arena
+          %a#arena_tab_link{ data: { tab: "arena_tab" }, title: "Arena"} Arena
         %li
-          %a#questions_tab_link{ href: "#", "data-tab" => "questions_tab", title: "Creative Responses"}  Creative Response
+          %a#questions_tab_link{ data: { tab: "questions_tab" }, title: "Creative Responses"}  Creative Response
         %li
-          %a#achievement_tab_link{ href: "#", "data-tab" => "achievements_tab", title: "Tasks"} Tasks      
+          %a#achievement_tab_link{ data: { tab: "achievements_tab" }, title: "Tasks"} Tasks      
       %div#arena_tab.tab_content{style:"margin-left:12px;"}
         - if @enrollment.contribution_unlocked?
           %div.editor_view{ style: "display: none; height:100%;" }
@@ -260,85 +260,84 @@
     var display_type = #{@display_type || 0};
     var open_tab;
     var task_subtypes = #{Task::SUBTYPES.to_json};
-    $(function(){
-      if(display_type == 0){ open_tab = "#questions_tab_link"; } 
-      if(display_type == 2){ open_tab = "#arena_tab_link"; } 
-      if(display_type == 3){ open_tab = "#achievement_tab_link"; }
-      
+    
+    if(display_type == 0){ open_tab = "#questions_tab_link"; } 
+    if(display_type == 2){ open_tab = "#arena_tab_link"; } 
+    if(display_type == 3){ open_tab = "#achievement_tab_link"; }
+    
+    $(".tab_content").hide();
+    $("ul.nav-tabs li.active").removeClass("active");
+    $(open_tab).parent().addClass("active");
+    $("#"+$(open_tab).attr("data-tab")).show().addClass("active_tab");
+    
+    $(".nav-tabs li a").click(function(){
       $(".tab_content").hide();
       $("ul.nav-tabs li.active").removeClass("active");
-      $(open_tab).parent().addClass("active");
-      $("#"+$(open_tab).attr("data-tab")).show().addClass("active_tab");
+      $(this).parent().addClass("active");
+      $(".active_tab").removeClass("active_tab");
+      var $open_tab = $("#"+$(this).attr("data-tab"));
+      $open_tab.addClass("active_tab");
+      $open_tab.find(".task_view").show();
+      $open_tab.find(".editor_view").hide();
+      $open_tab.show();
+    });
     
-      $(".nav-tabs li a").click(function(){
-        $(".tab_content").hide();
-        $("ul.nav-tabs li.active").removeClass("active");
-        $(this).parent().addClass("active");
-        $(".active_tab").removeClass("active_tab");
-        var $open_tab = $("#"+$(this).attr("data-tab"));
-        $open_tab.addClass("active_tab");
-        $open_tab.find(".task_view").show();
-        $open_tab.find(".editor_view").hide();
-        $open_tab.show();
-      });
-      
-      $("#editor_link").click(function(){
-        $(".active_tab").find(".task_view").hide();
-        $(".active_tab").find(".editor_view").show();
-      });
-      
-      $(".editor_view").each(function(){
-        var $editor = $(this);
-        $editor.find(".step1 a.next").click(function(){
-          if($editor.find("textarea").val() == ""){
-            return log_error("You must provide a question.");
+    $("#editor_link").click(function(){
+      $(".active_tab").find(".task_view").hide();
+      $(".active_tab").find(".editor_view").show();
+    });
+    
+    $(".editor_view").each(function(){
+      var $editor = $(this);
+      $editor.find(".step1 a.next").click(function(){
+        if($editor.find("textarea").val() == ""){
+          return log_error("You must provide a question.");
+        }
+        if($editor.find("input[name*=answer_type]").val() == 0){
+          if($editor.find("input[name*=answer_sub_type]:checked").size() == 0){
+            return log_error("You must provide an answer type.");
+          } else {
+            $editor.find(".step2 span.task_subtype").text(task_subtypes[$editor.find("input[name*=answer_sub_type]:checked").val()]);
           }
-          if($editor.find("input[name*=answer_type]").val() == 0){
-            if($editor.find("input[name*=answer_sub_type]:checked").size() == 0){
-              return log_error("You must provide an answer type.");
+        } else if ($editor.find("input[name*=answer_type]").val() == 2){
+          if($editor.find("input[name*=answer1]").val() == ""){
+            return log_error("You must provide a correct answer.");
+          } else {
+            if($editor.find("input[name*=answer2]").val() == ""){
+              return log_error("You must provide at least one incorrect answer.");
             } else {
-              $editor.find(".step2 span.task_subtype").text(task_subtypes[$editor.find("input[name*=answer_sub_type]:checked").val()]);
-            }
-          } else if ($editor.find("input[name*=answer_type]").val() == 2){
-            if($editor.find("input[name*=answer1]").val() == ""){
-              return log_error("You must provide a correct answer.");
-            } else {
-              if($editor.find("input[name*=answer2]").val() == ""){
-                return log_error("You must provide at least one incorrect answer.");
-              } else {
-                $editor.find(".step2 span.correct_answer").text($editor.find("input[name*=answer1]").val());
-              }
+              $editor.find(".step2 span.correct_answer").text($editor.find("input[name*=answer1]").val());
             }
           }
-          $editor.find(".step2 span.question").text($editor.find("textarea[name='task[question]']").val());
-          $editor.find(".step1").hide();
-          $editor.find(".step2").show();
-        });
-        
-        $editor.find(".step2 a.back").click(function(){
-          $editor.find(".step2").hide();
-          $editor.find(".step1").show();
-        });
-        
-        $editor.find(".step3 a.restart").click(function(){
-          $editor.find(".step3").hide();
-          $editor.find(".step1").find("input[type=text],textarea").val("");
-          $editor.find(".step1").show();
-        });
-        
-        $editor.find(".step3 a.finish").click(function(){
-          $editor.find(".step3").hide();
-          $editor.find(".step1").find("input[type=text],textarea").val("");
-          $editor.find(".step1").show();
-          $editor.hide();
-          $editor.siblings(".task_view").show();
-        });
-        
-        $editor.find("form").on("ajax:success", function(event, data){
-          $editor.find(".step2").hide();
-          $editor.find(".step3").find("a.take").attr("href", data.question_link);
-          $editor.find(".step3").show();
-        });
+        }
+        $editor.find(".step2 span.question").text($editor.find("textarea[name='task[question]']").val());
+        $editor.find(".step1").hide();
+        $editor.find(".step2").show();
+      });
+      
+      $editor.find(".step2 a.back").click(function(){
+        $editor.find(".step2").hide();
+        $editor.find(".step1").show();
+      });
+      
+      $editor.find(".step3 a.restart").click(function(){
+        $editor.find(".step3").hide();
+        $editor.find(".step1").find("input[type=text],textarea").val("");
+        $editor.find(".step1").show();
+      });
+      
+      $editor.find(".step3 a.finish").click(function(){
+        $editor.find(".step3").hide();
+        $editor.find(".step1").find("input[type=text],textarea").val("");
+        $editor.find(".step1").show();
+        $editor.hide();
+        $editor.siblings(".task_view").show();
+      });
+      
+      $editor.find("form").on("ajax:success", function(event, data){
+        $editor.find(".step2").hide();
+        $editor.find(".step3").find("a.take").attr("href", data.question_link);
+        $editor.find(".step3").show();
       });
     });
     
