--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -20,7 +20,7 @@
                 %span= @user.location
             %div.shareprofile
               %p Share profile:
-              = render "shared/sharing", { custom_style: "display: inline; margin-right: 10px; float: right;", title: "#{@user.name}'s awesome profile on MetaBright.com", url: request.url }
+              = render "shared/sharing", { custom_style: "display: inline; margin-right: 10px; float: right;", title: "#{@user.name}'s awesome profile on MetaBright.com", url: profile_url(@user.username) }
   
   - unless @user_personas.size == 0 || @enrollments.size == 0            
     %div.span12{ style: "margin-left: 0px;" }
@@ -37,14 +37,14 @@
         %div.hidden_personas{ style: "display: none;" }
           - @user_personas.each do |p|
             - next if p == @current_user_persona
-            %div.profileheader{ style: "border: none; border-radius: 0px; background-image: none; background-color: white;" }
+            %div.profileheader{ style: "border: none; border-radius: 0px; border-left: 1px solid rgba(0,0,0,.1); border-right: 1px solid rgba(0,0,0,.1); background-image: none; background-color: white;" }
               = link_to profile_path(@user.username, p: p.persona.id) do
                 %div{style: "display:inline-block; vertical-align: middle; width: 300px; cursor: pointer;"}
                   =image_tag p.persona.picture, style: "vertical-align: middle;"
                   %h3{ style: "vertical-align: middle; padding-top: 5px;" }= p.persona.name
                 %div.progress.progress-success.progress-striped.profileprog
                   %div.bar{ style:"width: #{p.percent_level}%"}
-                %h5 #{p.persona.name} lvl. #{p.level}
+                %h5{ style: "width: 150px;" } #{p.persona.name} lvl. #{p.level}
     %div.row
       %div.span5
         %div.challengeselector
@@ -123,7 +123,7 @@
   });
   
   $("#persona_list_link").click(function(){
-    if($('.hidden_personas').visible()){
+    if($('.hidden_personas').is(":visible")){
       $('.hidden_personas').hide();
     } else {
       $('.hidden_personas').show();
