nav bar edits and take edits

--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -29,7 +29,7 @@
                     - sharing_text = "Just leveled up and made it into the Top #{new_rank} in the #{@path.name} Challenge on @MetaBright!" 
                   - elsif new_level
                     You've jumped to Level #{new_level}!
-                    - sharing_text = "Just hit Level #{new_level} in the #{@path.name} Challenge on @MetaBright!"
+                    - sharing_text = "Just made it to level #{new_level} in the #{@path.name} Challenge on @MetaBright!"
                   - elsif new_rank
                     You just reached the Top #{new_rank}!
                     - sharing_text = "Just broke the Top #{new_rank} in the #{@path.name} Challenge on @MetaBright!"
