--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -4,6 +4,10 @@
   h3 { display: inline; margin-bottom: 2px; }
   p { font-size: 15px; }
   strong { color: #404040; }
+  .intcontainer { margin: 20px auto 12px auto; }
+  .modal_close { display: none; }
+  .body.container { background-color: transparent; padding-top: 0px; }
+
 :javascript
   $(function(){ $(".intcontainer").fadeIn(1000); });
 
