--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -93,7 +93,10 @@
                         %h3= enrollment.highest_rank
                         %p Highest Rank
                       %td
-                        %h3 8
+                        %h3= enrollment.votes_received
+                        %p Votes Received
+                      %td
+                        %h3= enrollment.comments_received
                         %p Comments Received
   
             %hr
