--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,14 +2,6 @@
 %html
   %head
     = render "layouts/head"
-    :javascript
-      var iph_off = #{!params[:iph].nil?};
-      var viewed_help = #{get_viewed_help};
-      var all_help = #{get_all_help.to_json};
-      var mark_read_url = '#{mark_read_url}';
-      var mark_help_read_url = '#{mark_help_read_url}';
-      $(function(){ init_iph(); });
-        
   %body
     - if current_user
       = render "modals/launchpad"
@@ -21,5 +13,67 @@
       - flash.each do |key, value|
         = content_tag(:div, value, :class => "alert alert-#{key}")
       = yield
+    :javascript
+      var iph_off = #{!params[:iph].nil?};
+      var viewed_help = #{get_viewed_help};
+      var all_help = #{get_all_help.to_json};
+      var mark_read_url = '#{mark_read_url}';
+      var mark_help_read_url = '#{mark_help_read_url}';
+      
+      $(function(){ 
+        init_iph(); 
+        close_button();
+        
+        $('.bar2').mosaic({ animation: 'slide' });
+        
+        $('.explore_link').click(function(){
+          $("#explore_modal").modal({ keyboard: true, show: true, backdrop: true});
+        });
+        
+        $('.notifications_link').on("ajax:success", function(xhr, data){
+          $("#notifications_modal").html(data).modal({ keyboard: true, show: true, backdrop: true});
+          $(".navitem").removeClass("highlighted");
+        });
+        
+        $('.hoverscroll').hoverscroll();
+
+        $("a[href*='/']").click(function(){
+          setTimeout("show_loading_icon();", 1500);
+          $.data(document.body, 'reload', true);
+        });
+        
+        $("#image_url_input").change(function(){
+          var link = $(this).val();
+          $(".image_url_preview").attr("src", link);
+          $("#image_url_preview").attr("src", link);
+        });
+        
+        $(".login_link").click(function(){
+          $("#login_modal").modal({ keyboard: true, backdrop: 'static', show: true });
+        });
+        
+        $(".arena_report_link").click(function(){
+          $("#report_issue_modal").modal({ keyboard: true, backdrop: 'static', show: true });
+        })
+      });
+    
+    - if Rails.env == "production"
+      :javascript
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-28492737-1']);
+        _gaq.push(['_trackPageview']);
+        
+        (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+        
+        function log(){ return true; }
+        
+    - else
+      :javascript
+        function log(str){ console.log(str); }
+      
     - if show_footer
       = render "layouts/footer"
