--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,9 @@
     - else
       = render "modals/login"
     = render "layouts/navbar"
-    %div.container.body{ style: "padding-top: 51px;" }
+    %div.container.body{ style: "padding-top: 51px;", data: { veid: @visit.try(:external_id) } }
       - flash.each do |key, value|
-        = content_tag(:div, value, :class => "alert alert-#{key}")
+        = content_tag(:div, value, class: "alert alert-#{key}")
       = yield
     :javascript
       var iph_off = #{!params[:iph].nil?};
@@ -20,42 +20,41 @@
       var mark_read_url = '#{mark_read_url}';
       var mark_help_read_url = '#{mark_help_read_url}';
       
-      $(function(){ 
-        init_iph(); 
-        close_button();
-        
-        $('.bar2').mosaic({ animation: 'slide' });
-        
-        $('.explore_link').click(function(){
-          $("#explore_modal").modal({ keyboard: true, show: true, backdrop: true});
-        });
-        
-        $('.notifications_link').on("ajax:success", function(xhr, data){
-          $("#notifications_modal").html(data).modal({ keyboard: true, show: true, backdrop: true});
-          $(".navitem").removeClass("highlighted");
-        });
-        
-        $('.hoverscroll').hoverscroll();
-
-        $("a[href*='/']").click(function(){
-          setTimeout("show_loading_icon();", 1500);
-          $.data(document.body, 'reload', true);
-        });
-        
-        $("#image_url_input").change(function(){
-          var link = $(this).val();
-          $(".image_url_preview").attr("src", link);
-          $("#image_url_preview").attr("src", link);
-        });
-        
-        $(".login_link").click(function(){
-          $("#login_modal").modal({ keyboard: true, backdrop: 'static', show: true });
-        });
-        
-        $(".arena_report_link").click(function(){
-          $("#report_issue_modal").modal({ keyboard: true, backdrop: 'static', show: true });
-        })
+      $('.explore_link').click(function(){
+        $("#explore_modal").modal({ keyboard: true, show: true, backdrop: true});
       });
+      
+      $('.bar2').mosaic({ animation: 'slide' });
+        
+      $('.notifications_link').on("ajax:success", function(xhr, data){
+        $("#notifications_modal").html(data).modal({ keyboard: true, show: true, backdrop: true});
+        $(".navitem").removeClass("highlighted");
+      });
+      
+      $('.hoverscroll').hoverscroll();
+
+      $("a[href*='/']").click(function(){
+        setTimeout("show_loading_icon();", 1500);
+        $.data(document.body, 'reload', true);
+      });
+      
+      $("#image_url_input").change(function(){
+        var link = $(this).val();
+        $(".image_url_preview").attr("src", link);
+        $("#image_url_preview").attr("src", link);
+      });
+      
+      $(".login_link").click(function(){
+        $("#login_modal").modal({ keyboard: true, backdrop: 'static', show: true });
+      });
+      
+      $(".arena_report_link").click(function(){
+        $("#report_issue_modal").modal({ keyboard: true, backdrop: 'static', show: true });
+      });
+      
+      $(".modal_close").click(function(){ $(this).parents('.modal').modal('hide'); });
+      
+      $(function(){ init_iph(); });
     
     - if Rails.env == "production"
       :javascript
